Added months temperature form for city

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,19 @@
   <string name="celsius">по Цельсию</string>
   <string name="fahrenheit">По Фаренгейту</string>
   <string name="kelvin">По Кельвину</string>
+
+  <string-array name="months">
+    <item>Январь</item>
+    <item>Февраль</item>
+    <item>Май</item>
+    <item>Апрель</item>
+    <item>Май</item>
+    <item>Июнь</item>
+    <item>Июль</item>
+    <item>Август</item>
+    <item>Сентябрь</item>
+    <item>Октябрь</item>
+    <item>Ноябрь</item>
+    <item>Декабрь</item>
+  </string-array>
 </resources>
